// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountImagesView Component should render a connected component with default props: connected 1`] = `
<Route>
  <Component />
</Route>
`;

exports[`AccountImagesView Component should render a non-connected component in fulfilled state: fulfilled and empty 1`] = `
<div
  class="container-fluid"
>
  <div
    class="row"
  >
    <div
      class="blank-slate-pf full-page-blank-slate"
    >
      <div
        class="blank-slate-pf-icon"
      >
        <span
          aria-hidden="true"
          class="pficon pficon-add-circle-o"
        />
      </div>
      <h4
        class="h1 blank-slate-pf-title"
      >
        No Images Available
      </h4>
      <p
        class="blank-slate-pf-info"
      >
        Add an AWS account to monitor usage.
      </p>
      <div
        class="blank-slate-pf-main-action"
      >
        <button
          class="btn btn-lg btn-primary"
          type="button"
        >
          Add Account
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`AccountImagesView Component should render a non-connected component in fulfilled state: fulfilled with a empty list 1`] = `
<div
  className="cloudmeter-view-container fadein"
>
  <Grid
    bsClass="container"
    componentClass="div"
    fluid={true}
  >
    <Breadcrumb
      className="cloudmeter-breadcrumb"
      title={true}
    >
      <BreadcrumbItem
        active={false}
        onClick={[Function]}
      >
        Accounts
      </BreadcrumbItem>
      <BreadcrumbItem
        active={true}
        aria-current="page"
      >
        <strong>
          Account 
        </strong>
      </BreadcrumbItem>
    </Breadcrumb>
  </Grid>
  <ViewToolbar
    activeFilters={Array []}
    dateFields={null}
    dateValue={null}
    filterField={null}
    filterFields={Array []}
    filterValue=""
    onAddAccount={[Function]}
    onExport={null}
    query={Object {}}
    resultsType="Result"
    resultsTypePlural="Results"
    selectedCount={0}
    sortAscending={true}
    sortFields={
      Array [
        Object {
          "id": "name",
          "isNumeric": false,
          "sortAscending": true,
          "title": "Name",
        },
        Object {
          "id": "images",
          "isNumeric": false,
          "sortAscending": true,
          "title": "Images",
        },
        Object {
          "id": "instances",
          "isNumeric": false,
          "sortAscending": true,
          "title": "Instances",
        },
        Object {
          "id": "rhel",
          "isNumeric": false,
          "sortAscending": true,
          "title": "Rhel",
        },
        Object {
          "id": "openshift",
          "isNumeric": false,
          "sortAscending": true,
          "title": "OpenShift",
        },
      ]
    }
    sortValue={null}
    totalCount={0}
    view="accountImages"
    viewGlobal="accountGlobal"
  />
  <div
    className="cloudmeter-list-container"
  >
    <EmptyState
      className="list-view-blank-slate"
    >
      <EmptyStateTitle
        className=""
      >
        No Results Available
      </EmptyStateTitle>
      <EmptyStateAction
        className=""
        secondary={false}
      >
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="link"
          disabled={false}
          onClick={[Function]}
        >
          Reset Date Selector
        </Button>
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="link"
          disabled={false}
          onClick={[Function]}
        >
          Return to Accounts
        </Button>
      </EmptyStateAction>
    </EmptyState>
  </div>
</div>
`;

exports[`AccountImagesView Component should render a non-connected component in fulfilled state: fulfilled with a list 1`] = `
<div
  className="cloudmeter-view-container fadein"
>
  <Grid
    bsClass="container"
    componentClass="div"
    fluid={true}
  >
    <Breadcrumb
      className="cloudmeter-breadcrumb"
      title={true}
    >
      <BreadcrumbItem
        active={false}
        onClick={[Function]}
      >
        Accounts
      </BreadcrumbItem>
      <BreadcrumbItem
        active={true}
        aria-current="page"
      >
        <strong>
          Account 
        </strong>
      </BreadcrumbItem>
    </Breadcrumb>
  </Grid>
  <ViewToolbar
    activeFilters={Array []}
    dateFields={null}
    dateValue={null}
    filterField={null}
    filterFields={Array []}
    filterValue=""
    onAddAccount={[Function]}
    onExport={null}
    query={Object {}}
    resultsType="Result"
    resultsTypePlural="Results"
    selectedCount={0}
    sortAscending={true}
    sortFields={
      Array [
        Object {
          "id": "name",
          "isNumeric": false,
          "sortAscending": true,
          "title": "Name",
        },
        Object {
          "id": "images",
          "isNumeric": false,
          "sortAscending": true,
          "title": "Images",
        },
        Object {
          "id": "instances",
          "isNumeric": false,
          "sortAscending": true,
          "title": "Instances",
        },
        Object {
          "id": "rhel",
          "isNumeric": false,
          "sortAscending": true,
          "title": "Rhel",
        },
        Object {
          "id": "openshift",
          "isNumeric": false,
          "sortAscending": true,
          "title": "OpenShift",
        },
      ]
    }
    sortValue={null}
    totalCount={0}
    view="accountImages"
    viewGlobal="accountGlobal"
  />
  <div
    className="cloudmeter-list-container"
  >
    <Grid
      bsClass="container"
      componentClass="div"
      fluid={true}
    >
      <Row
        bsClass="row"
        className="row-cards-pf"
        componentClass="div"
      >
        <Col
          bsClass="col"
          componentClass="div"
          xs={12}
        >
          <Card
            accented={false}
            aggregated={false}
            aggregatedMini={false}
            cardRef={null}
            className="cloudmeter-list-view-card"
            matchHeight={false}
          >
            <ListView
              className="cloudmeter-list-view"
            >
              <Connect(Translate(AccountImagesViewListItem))
                filter={
                  Object {
                    "dateFields": null,
                    "query": Object {},
                  }
                }
                item={
                  Object {
                    "cloud_image_id": "ami-rhel7",
                    "id": 2,
                    "instances_seen": 2,
                    "is_encrypted": false,
                    "memory_seconds": 500.5,
                    "name": null,
                    "openshift": true,
                    "openshift_challenged": true,
                    "openshift_detected": false,
                    "rhel": true,
                    "rhel_challenged": false,
                    "rhel_detected": true,
                    "runtime_seconds": 2000.4,
                    "status": "inspected",
                    "vcpu_seconds": 500.2,
                  }
                }
                key="2"
              />
            </ListView>
          </Card>
        </Col>
      </Row>
    </Grid>
  </div>
</div>
`;

exports[`AccountImagesView Component should render a non-connected component in pending state: pending 1`] = `
<div
  class="cloudmeter-view-container"
/>
`;

exports[`AccountImagesView Component should render a non-connected component in pending state: pending with no visible list 1`] = `
<div
  className="cloudmeter-view-container"
>
  <Modal
    animation={false}
    autoFocus={true}
    backdrop={false}
    bsClass="modal"
    bsSize="lg"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "add": [Function],
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "isTopModal": [Function],
        "modals": Array [],
        "remove": [Function],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    show={true}
  >
    <ModalBody
      bsClass="modal-body"
      componentClass="div"
    >
      <Spinner
        className="blank-slate-pf-icon"
        inline={false}
        inverse={false}
        loading={true}
        size="lg"
      />
      <div
        className="text-center"
      >
        Loading...
      </div>
    </ModalBody>
  </Modal>
</div>
`;

exports[`AccountImagesView Component should render a non-connected component with empty state: empty state 1`] = `
<div
  class="container-fluid"
>
  <div
    class="row"
  >
    <div
      class="blank-slate-pf full-page-blank-slate"
    >
      <div
        class="blank-slate-pf-icon"
      >
        <span
          aria-hidden="true"
          class="pficon pficon-add-circle-o"
        />
      </div>
      <h4
        class="h1 blank-slate-pf-title"
      >
        No Images Available
      </h4>
      <p
        class="blank-slate-pf-info"
      >
        Add an AWS account to monitor usage.
      </p>
      <div
        class="blank-slate-pf-main-action"
      >
        <button
          class="btn btn-lg btn-primary"
          type="button"
        >
          Add Account
        </button>
      </div>
    </div>
  </div>
</div>
`;
